--- a/YML/homework/playbook13.yml
+++ b/YML/homework/playbook13.yml
@@ -1,8 +1,8 @@
 ---
-
 - name: Deploy lamp stack application
   hosts: all
-  becoming: yes
+  become: yes
+  gather_facts: no
   tasks:
     - name: Install common dependencies
       yum:
@@ -10,29 +10,31 @@
           - libselinux-python
           - libsemanage-python
           - firewalld
-        state: install
-
+        state: installed
     # Install and Configure Database
 - name: Deploy lamp stack application
-  hosts: db_servers
+  hosts: serverb
   become: yes
   tasks:
     - name: Install MariaDB package
-
       yum:
         name:
           - mariadb-server
           - MySQL-python
-        state: installed
-
+        state: latest
     - name: Start MariaDB Service
-      service: name:mariadb state:started enabled=yes
-
+      service:
+        name: mariadb
+        state: started
+        enabled: yes
     - name: Start firewalld
-      service: name=firewalld state=started enabled=yes
-
+      service:
+        name: firewalld
+        state: started
+        enabled: yes
 - name: Deploy lamp stack application
-  hosts: web_servers
+  hosts: servera
+  gather_facts: no
   check_mode: yes # Do not modify this line
   become: yes
   tasks:
@@ -45,10 +47,16 @@
         state: present
 
     - name: Install web role specific dependencies
-      yum: name=git state=installed
-
+      yum:
+        name: git
+        state: latest
     - name: Start firewalld
-      service: name=firewalld state=started enabled=yes
-
-    -              name: http service state
-                   service: name=httpd state=start enabled=yes
+      service:
+        name: firewalld
+        state: started
+        enabled: yes
+    - name: http
+      service:
+        name: httpd
+        state: started
+        enabled: yes 
