Include YML tested

--- a/YML/homework/playbook12.yml
+++ b/YML/homework/playbook12.yml
@@ -1,7 +1,9 @@
+---
 - hosts: localhost
+  gather_facts: no
   vars:
-    my_name: Student
+    my_name: "Student"
   tasks:
     - name: Print Student is my name
       debug:
-        msg: "{{ my_name }}"" is my name
+        msg: "'{{ my_name }}' is my name"
