Added ansible roles

--- a/YML/chrony.yml
+++ b/YML/chrony.yml
@@ -6,7 +6,7 @@
   vars:
     - myserver:
         - host: "servera"
-          type: "server"
+          type: "server"333
         - host: "serverb"
           type: "client"
     - servertype: "{{ myserver.type }}"
